--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,26 @@ html, body {
   font-family: monospace;
 }
 
+@keyframes blinker {
+  50% { opacity: 0.7; }
+}
+
+.instructions-container {
+  position: fixed;
+  z-index: 10;
+  bottom: 1em;
+  left: 0em;
+  right: 0em;
+}
+
+#instructions {
+  animation: blinker 1s linear infinite;
+  font-family: monospace;
+  color: rgb(54, 60, 77);
+  text-align: center;
+
+}
+
 #ai-button:hover {
   background: rgb(60, 65, 80);
 }
