--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,43 @@ html, body {
   padding: 0px;
 }
 
+table, th, td {
+  font-family: monospace;
+  font-size: 1.5em;
+  color: rgb(54, 60, 77);
+  border: 1px solid rgb(54, 60, 77);
+  text-align: right;
+}
+
+td { padding: .2em }
+
+.table-header {
+  font-size: 2.4em;
+  font-weight: bold;
+  font-family: monospace;
+  color: rgb(54, 60, 77);
+}
+
+.table-container {
+  overflow-y: scroll;
+  max-height: 20em;
+}
+
+.table-container::-webkit-scrollbar {
+  display: none;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+#scores-list-container {
+  position: fixed;
+  left: 1em;
+  z-index: 10;
+  top: 1em
+}
+
 #draw-shapes {
   position: fixed;
   z-index: -10;
